# PyroPatrol-ROS

./: .gitignore  ALL_FIXES_APPLIED.md  ARCHITECTURE.md  CONTROL_IMPROVEMENTS.md  DEPLOYMENT_CHECKLIST.md  ESP32_FIRMWARE_TEMPLATE.ino  ESP32_MIGRATION_GUIDE.md  ESP32_SETUP_GUIDE.md  ESP_CODE.ino  FINAL_INTEGRATION_STATUS.md  HARDWARE_UPDATE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INSTALLATION_COMPLETE.md  INTEGRATED_BRINGUP_GUIDE.md  INTEGRATION_SUMMARY.md  LAUNCH_GUIDE.md  LIDAR_NAVIGATION_README.md  MOTOR_FIX_GUIDE.md  MPU6050_FIX_COMPLETE.md  MPU6050_QUICK_FIX.md  MPU6050_TROUBLESHOOTING.md  PATH_FIX.md  PUBLISHERS_SUBSCRIBERS_REFERENCE.md  QUICK_FIX.md  QUICK_START.md  QUICK_START_LIDAR.md  README.md  ROS_ARCHITECTURE.md  ROS_UPDATES_README.md  SAFETY_TIMEOUT_EXPLAINED.md  SETUP_CHECKLIST.md  SLAM_README.md  SYSTEM_ARCHITECTURE.md  TELEOP_CORRECTION.md  TELEOP_FIXED.md  TELEOP_LIDAR_FIX.md  TROUBLESHOOTING.md  VIBRATION_FIX_GUIDE.md  (+49 more)
src/frr_bringup/: package.xml  setup.cfg  setup.py
src/frr_bringup/launch/: aruco_simple.launch.py  autonomous_robot.launch.py  esp32_rover_bringup.launch.py  lidar_navigation.launch.py  rover_bringup.launch.py  slam_localization.launch.py  (+5 more)
src/frr_control/: motor_controller_node_backup.py  package.xml  setup.cfg  setup.py  teleop_node.py
src/frr_navigation/: package.xml  setup.cfg  setup.py
src/frr_sensors/: camera_node.py  imu_node.py  package.xml  setup.cfg  setup.py  simple_camera_node.py
src/frr_video/: package.xml  setup.cfg  setup.py  streamer_node.py
src/frr_video/frr_video/: streamer_node.py
(+27 files in other folders)
